fixed navbar on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -205,6 +205,10 @@ nav a.active {
 		display: none;
 	}
 
+	.divider {
+		display: none;
+	}
+
 	.nav-menu-button {
 		display: block;
 	}
